# DiffInspector

./: .env.example  .gitignore  README.md  code-review-agent  config.yaml  pyproject.toml  requirements.txt  setup.py
examples/: webhook_server.py
rules/: default.yaml  security.yaml
src/: __init__.py  config.py  context_retriever.py  diff_analyzer.py  git_provider.py  github_client.py  gitlab_client.py  llm_client.py  main.py  orchestrator.py  response_parser.py  review_prompt.py  rule_engine.py
