[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "code-review-agent"
version = "0.1.0"
description = "Automatisierter Code-Review-Agent mit Ollama, Git-Integration und Regelwerk"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "Code Review Agent Team"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
github = ["PyGithub>=2.1.0"]
gitlab = ["python-gitlab>=4.0"]
webhook = ["fastapi>=0.104", "uvicorn[standard]>=0.24"]
all = ["code-review-agent[github,gitlab,webhook]"]

[project.scripts]
code-review-agent = "src.main:cli"

[tool.setuptools.packages.find]
include = ["src*"]
